tests/mm0_mmu/fail/bad-sort421.mmu
-- bad modifier order
(sort s421 free strict pure)